--- a/index.html
+++ b/index.html
@@ -8,81 +8,67 @@
   </head>
 
   <body>
-    <header>
-      <h1 class="heading">
+    <section class="main-visual">
+      <h1 class="headline">
 
 
         サービス紹介
       </h1>
-    </header>
+    </section>
 
     <main>
-      <section class="blog">
-
-        <div class="blog-box">
-
-          <div class="blog-item">
-            <img class="blog-image" src="img/wc-logo.png">
-            <section class="blog-text">
-              <h2 class="blog-text-heading">
-                マンツーマンサポートによる学習で、<br>
-                確実にWebスキルを習得できるプログラミングスクールです。<br>
-              </h2>
-              <a href="index.html">webサイト</a>
-
-            </section>
-          </div>
-
-          <div class="blog-item">
-            <img class="blog-image" src="img/wcp-logo.png">
-            <section class="blog-text">
-              <h2 class="blog-text-heading">
-                マンツーマンサポートによる学習で、<br>
-                確実にWebスキルを習得できるプログラミングスクールです。<br>
-                <a href="index.html">webサイト</a>
-
-              </h2>
-
-
-            </section>
-          </div>
-
-          <div class="blog-item">
-            <img class="blog-image" src="img/wcw-logo.png">
-            <section class="blog-text">
-              <h2 class="blog-text-heading">
-                マンツーマンサポートによる学習で、<br>
-                確実にWebスキルを習得できるプログラミングスクールです。<br>
-              </h2>
-              <a href="index.html">webサイト</a>
-
-            </section>
-          </div>
-
-          <div class="blog-item">
-            <img class="blog-image" src="img/wcc-logo.png">
-            <section class="blog-text">
-              <h2 class="blog-text-heading">
-                マンツーマンサポートによる学習で、<br>
-                確実にWebスキルを習得できるプログラミングスクールです。<br>
-              </h2>
-              <a href="index.html">webサイト</a>
-
-            </section>
-          </div>
-
-
-
-        </div>
-
-
-
-
+      <section class="service1">
+        <h2>
+          <img src="img/wc-logo.png" alt="ロゴ">
+        </h2>
+        <p>
+          マンツーマンサポートによる学習で、<br>
+          確実にWebスキルを習得できるプログラミングスクールです。
+        </p>
+        <a href="index.html">webサイト</a>
       </section>
+
+      <section class="service2">
+        <h2>
+          <img src="img/wcp-logo.png" alt="ロゴ">
+        </h2>
+        <p>
+          未経験から転職を保証する<br>
+          日本で唯一のプログラミングスクールです。
+        </p>
+        <a href="index.html">webサイト</a>
+      </section>
+
+      <section class="service3">
+        <h2>
+          <img src="img/wcw-logo.png" alt="ロゴ">
+        </h2>
+        <p>
+          家庭も仕事も頑張りたい主婦・ママ向けの、<br>
+          1ヶ月でWebサイトを制作するWebデザインスクールです。
+        </p>
+        <a href="index.html">webサイト</a>
+      </section>
+
+      <section class="service4">
+        <h2>
+          <img src="img/wcc-logo.png" alt="ロゴ">
+        </h2>
+        <p>
+          3000名のエンジニアをサポートしてきたエージェントが<br>
+          あなたの転職をサポート。
+        </p>
+        <a href="index.html">webサイト</a>
+      </section>
+
+
+
+
     </main>
 
 
 
-    <footer></footer>
+
 
   </body>
+</html>
